cabal-version:       2.2
name:                freer-extras
version:             0.1.0.0
synopsis:            Useful extensions to simple-freer
description:         freer-extras provides logging and monitoring functions extending simple-freer
bug-reports:         https://github.com/iohk/plutus/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tobias Pflug
maintainer:          tobias.pflug@iohk.io
build-type:          Simple

source-repository head
    type: git
    location: https://github.com/iohk/plutus

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities


library
  import:              lang
  hs-source-dirs: src
  exposed-modules:
        Control.Monad.Freer.Extras
        Control.Monad.Freer.Extras.Beam
        Control.Monad.Freer.Extras.Log
        Control.Monad.Freer.Extras.Modify
        Control.Monad.Freer.Extras.Pagination
        Control.Monad.Freer.Extras.State
        Control.Monad.Freer.Extras.Stream
  build-depends:
        aeson -any,
        base >=4.7 && <5,
        beam-core -any,
        beam-sqlite -any,
        containers -any,
        data-default -any,
        freer-simple -any,
        iohk-monitoring -any,
        lens -any,
        mtl -any,
        openapi3 -any,
        prettyprinter -any,
        sqlite-simple -any,
        streaming -any,
        text -any,

test-suite freer-extras-test
    import: lang
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Control.Monad.Freer.Extras.BeamSpec
        Control.Monad.Freer.Extras.PaginationSpec
    build-depends:
        hedgehog -any,
        tasty -any,
        tasty-hedgehog -any,
    build-depends:
        base >=4.7 && <5,
        beam-core -any,
        beam-migrate -any,
        beam-sqlite -any,
        containers -any,
        contra-tracer -any,
        freer-extras -any,
        freer-simple -any,
        lens -any,
        semigroups -any,
        sqlite-simple -any,
