cabal-version: >=1.10
name: interpreter
version: 0.1.0.0
license: BSD3
copyright: 2019 IOHK
author: David Smith
category: Web
build-type: Simple

library
    exposed-modules:
        System.IO.Temp.Extras
        Control.Monad.Except.Extras
        Language.Haskell.Interpreter
        Servant.Extra
        Servant.Prometheus
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        aeson -any,
        base >=4.7 && <5,
        bytestring -any,
        bytestring -any,
        cookie -any,
        directory -any,
        exceptions -any,
        file-embed -any,
        filepath -any,
        hashable -any,
        http-types -any,
        marlowe -any,
        monad-logger -any,
        mtl -any,
        newtype-generics -any,
        process -any,
        prometheus >=2,
        servant <0.15,
        servant-purescript -any,
        servant-server -any,
        temporary -any,
        text -any,
        time -any,
        transformers -any,
        unordered-containers -any,
        wai -any,
        warp -any