cabal-version: 2.0
name: interpreter
version: 0.1.0.0
license: Apache-2.0
license-files: 
  LICENSE
  NOTICE
author: David Smith
category: Web
build-type: Simple

library
    other-modules:
        Git.TH
    exposed-modules:
        System.IO.Temp.Extras
        Control.Monad.Except.Extras
        Language.Haskell.Interpreter
        Servant.Extra
        Servant.Prometheus
        Git
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        aeson -any,
        base >=4.7 && <5,
        bytestring -any,
        bytestring -any,
        cookie -any,
        directory -any,
        exceptions -any,
        filepath -any,
        file-embed -any,
        hashable -any,
        http-types -any,
        monad-logger -any,
        mtl -any,
        newtype-generics -any,
        process -any,
        prometheus >=2,
        safe-exceptions -any,
        servant <0.16,
        servant-purescript -any,
        servant-server -any,
        temporary -any,
        template-haskell -any,
        text -any,
        time -any,
        time-out -any,
        time-units -any,
        transformers -any,
        unordered-containers -any,
        wai -any
