cabal-version: 1.12

name:           iots-export
version:        0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
synopsis:       Tools to export Haskell to IOTS
description:    Tools to export Haskell to IOTS
category:       Web
author:         Kris Jenkins
maintainer:     kris.jenkins@tweag.com
build-type:     Simple
extra-source-files:
    README.md
data-files:
    test/IOTS/fullContract.ts
    test/IOTS/functionList.ts
    test/IOTS/functionMaybe.ts
    test/IOTS/functionTuple.ts
    test/IOTS/response.ts
    test/IOTS/simpleSum.ts
    test/IOTS/singleFieldless.ts
    test/IOTS/tester.ts
    test/IOTS/thing.ts
    test/IOTS/user.ts
    test/IOTS/vestingTranche.ts

source-repository head
  type: git
  location: https://github.com/input-output-hk/plutus

library
  exposed-modules:
      IOTS
  other-modules:
      IOTS.Leijen
      IOTS.Tree
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , mtl
    , text
    , wl-pprint-text
    , tagged
  default-language: Haskell2010

test-suite iots-export-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
      IOTSSpec
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints -Widentities
  build-depends:
      base >=4.7 && <5
    , containers
    , tasty
    , tasty-golden
    , iots-export
    , bytestring
    , mtl
    , text
    , wl-pprint-text
  default-language: Haskell2010
